--- a/style.css
+++ b/style.css
@@ -48,8 +48,7 @@ h3 {
   max-width: 90%;
   height: auto;
   border-radius: 40px;
-  margin-top: 20px;
-  margin-left: 50px;
+  margin: 20px 50px;
 }
 .spass {
   margin-top: 80px;
